[gd_scene load_steps=3 format=3 uid="uid://c42yn8m3jhp6p"]

[ext_resource type="Script" uid="uid://dhawin6ohfkr1" path="res://addons/auto_structured/ui/panels/preview_panel.gd" id="1_qeup7"]
[ext_resource type="Texture2D" uid="uid://d04dma5ci7ufp" path="res://icon.svg" id="2_s3do3"]

[node name="PreviewPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qeup7")

[node name="Panel" type="Panel" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopBar" type="HBoxContainer" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
z_index = 1
layout_mode = 2

[node name="NewButton" type="Button" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "New"

[node name="ImportButton" type="Button" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Import"

[node name="ExportButton" type="Button" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Export"

[node name="SolveButton" type="Button" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Solve"

[node name="StepButton" type="Button" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Step"

[node name="Panel" type="Panel" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/Panel/CenterContainer"]
layout_mode = 2
texture = ExtResource("2_s3do3")
